--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "express": "^4.19.2",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-config": "^1.5.1",
