--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-config": "^1.5.1",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
